zirgen/dsl/test/repro/crash_while_inlining_back.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK:      error: back operation must apply to a component with a layout,
// CHECK-SAME: but `Val` does not have a layout

component Top() {
  x := -Reg(1);
  y := Reg(x@1 +-x);
}

